--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,7 @@
 @import "var.css";
 
 body {
-	font-family: "Montserrat", Arial, Helvetica, sans-serif;
+	font-family: 'Roboto', sans-serif;
 	background: var(--gradient-first);
 	background: -webkit-linear-gradient(
 		to right,
