minor style fix on pattern selector

--- a/src/styles/patternSelector.css
+++ b/src/styles/patternSelector.css
@@ -40,7 +40,7 @@
 
 .pattern-selector__card--options label {
 	color:rgb(255, 174, 74);
-	padding-inline: 5%;
+	/* padding-inline: 5%; */
 }
 
 .pattern-selector__button-container {
