--- a/src/styles/patternSelector.css
+++ b/src/styles/patternSelector.css
@@ -32,7 +32,7 @@
 	height: max-content;
 	background-color: var(--color-primary);
 	border-radius: 3px;
-	box-shadow: 0px 0px 10px rgba(33, 37, 41, 0.5);
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 	margin: 1%;
 	justify-content: space-between;
 	align-items: center;
@@ -40,6 +40,8 @@
 
 .pattern-selector__card--options label {
 	color:rgb(255, 174, 74);
+	padding-right: 10px;
+	font-size: 1.4em;
 	/* padding-inline: 5%; */
 }
 
@@ -51,6 +53,7 @@
 	align-items: center;
 	justify-content: center;
 	margin-top: 3%;
+	padding-top: 10px;
 }
 
 .pattern-selector__button-container button {
@@ -61,15 +64,18 @@
 
 .pattern-selector__result-container {
 	display: flex;
-	width: 100%;
+	width: 90%;
 	height: max-content;
 	align-items: center;
 	justify-content: center;
+	margin: 0 auto;
+	padding-bottom: 10px;
+	padding-top: 10px;
 }
 
 .pattern-selector__result-container p {
 	text-align: center;
-	font-size: 1.5em;
+	font-size: 1.3em;
 	font-weight: bold;
 	margin-top: 3%;
 	margin-bottom: 3%;
@@ -97,8 +103,10 @@
 		margin-bottom: 3%;
 	}
 
+	.pattern-selector__card--options label {
+		font-size: 1.2em;
+	}
 	.pattern-selector__card--title {
-		margin-block: 3%;
 	}
 }
 
