--- a/src/styles/paternRoulette.css
+++ b/src/styles/paternRoulette.css
@@ -64,7 +64,7 @@
 	top: -28px;
 	width: 20px;
 	height: 30px;
-	background: red;
+	background: #333;
 	clip-path: polygon(50% 0%, 25% 100%, 75% 100%);
 }
 
